--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,16 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.3.1</version>
             </plugin>
+                <plugin>
+                    <groupId>com.heroku.sdk</groupId>
+                    <artifactId>heroku-maven-plugin</artifactId>
+                    <version>3.0.3</version>
+                    <configuration>
+                        <appName>lasanha</appName>
+                    </configuration>
+                </plugin>
         </plugins>
+
+
     </build>
 </project>
