--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <maven.compiler.target>11</maven.compiler.target>
         <maven.compiler.source>11</maven.compiler.source>
         <junit.version>5.7.1</junit.version>
+        <java.version>11</java.version> 
 
              <maven.compiler.source>1.8</maven.compiler.source>
             <maven.compiler.target>1.8</maven.compiler.target>
